# piscine_cyber

ft_otp/oath-toolkit-2.6.9/: AUTHORS  CONTRIBUTING.md  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  cfg.mk  config.status  configure  configure.ac
ft_otp/oath-toolkit-2.6.9/gl/: Makefile  Makefile.am  Makefile.in
ft_otp/oath-toolkit-2.6.9/gl/.deps/: libgnu_a-dummy.Po
ft_otp/oath-toolkit-2.6.9/gl/m4/: gnulib-cache.m4  gnulib-comp.m4
ft_otp/oath-toolkit-2.6.9/gl/tests/: Makefile  Makefile.am  Makefile.in
ft_otp/oath-toolkit-2.6.9/liboath/: Makefile  Makefile.am  Makefile.in  aclocal.m4  aux.c  aux.h  aux.lo  coding.c  coding.lo  config.h  config.h.in  config.status  configure  configure.ac  errors.c  errors.lo  global.c  global.lo  hotp.c  hotp.h  hotp.lo  liboath.la  liboath.map  liboath.pc  liboath.pc.in  libtool  oath.h  oath.h.in  totp.c  totp.lo  usersfile.c  usersfile.lo
ft_otp/oath-toolkit-2.6.9/liboath/.deps/: aux.Plo  hotp.Plo  totp.Plo  usersfile.Plo
ft_otp/oath-toolkit-2.6.9/liboath/.libs/: liboath.lai  liboath.so.0.1.3
ft_otp/oath-toolkit-2.6.9/liboath/gl/: Makefile  Makefile.am  Makefile.in  fopen.lo  libgnu_la-af_alg.lo  libgnu_la-base32.lo  libgnu_la-cloexec.lo  libgnu_la-dirname-lgpl.lo  libgnu_la-fclose.lo  libgnu_la-fflush.lo  libgnu_la-fpurge.lo  libgnu_la-freading.lo  libgnu_la-fseek.lo  libgnu_la-fseeko.lo  libgnu_la-gc-gnulib.lo  libgnu_la-hmac-sha1.lo  libgnu_la-hmac-sha256.lo  libgnu_la-hmac-sha512.lo  libgnu_la-ialloc.lo  libgnu_la-memxor.lo  libgnu_la-sha1-stream.lo  libgnu_la-sha1.lo  libgnu_la-sha256-stream.lo  libgnu_la-sha256.lo  libgnu_la-sha512-stream.lo  libgnu_la-sha512.lo  libgnu_la-stripslash.lo  libgnu_la-sys_socket.lo  libgnu_la-u64.lo  libgnu_la-xsize.lo  printf-parse.lo  stdio.h  stdlib.h  string.h  time.h  unistd.h  vasnprintf.lo
ft_otp/oath-toolkit-2.6.9/liboath/gtk-doc/: Makefile  Makefile.in  liboath-docs.xml  liboath-sections.txt
ft_otp/oath-toolkit-2.6.9/liboath/man/: Makefile  Makefile.am  Makefile.gdoc  Makefile.in  gdoc  oath_authenticate_usersfile.3  oath_base32_decode.3  oath_base32_encode.3  oath_bin2hex.3  oath_check_version.3  oath_done.3  oath_hex2bin.3  oath_hotp_generate.3  oath_hotp_validate.3  oath_hotp_validate_callback.3  oath_init.3  oath_strerror.3  oath_strerror_name.3  oath_totp_generate.3  oath_totp_generate2.3  oath_totp_validate.3  oath_totp_validate2.3  oath_totp_validate2_callback.3  oath_totp_validate3.3  oath_totp_validate3_callback.3  oath_totp_validate4.3  oath_totp_validate4_callback.3  oath_totp_validate_callback.3
ft_otp/oath-toolkit-2.6.9/liboath/tests/: Makefile  Makefile.am  Makefile.in  tst_basic.c  tst_coding.c  tst_errors.c  tst_hotp_algo.c  tst_hotp_validate.c  tst_totp_algo.c  tst_totp_validate.c  tst_usersfile.c  tst_usersfile.sh
ft_otp/oath-toolkit-2.6.9/libpskc/: Makefile  Makefile.am  Makefile.in  README  aclocal.m4  build.c  build.lo  config.h  config.h.in  config.status  configure  configure.ac  container.c  container.lo  enums.c  enums.lo  errors.c  global.c  internal.h  libpskc.la  libpskc.map  libpskc.pc  libpskc.pc.in  libtool  output.c  output.lo  parser.c  parser.lo  sign.c  sign.lo  validate.c  validate.lo
ft_otp/oath-toolkit-2.6.9/libpskc/.deps/: build.Plo  container.Plo  enums.Plo  errors.Plo  validate.Plo
ft_otp/oath-toolkit-2.6.9/libpskc/.libs/: libpskc.la  libpskc.lai  libpskc.so.0.0.1
ft_otp/oath-toolkit-2.6.9/libpskc/examples/: Makefile  Makefile.am  Makefile.in  pskc2csv  pskccreate  pskcsign  pskcverify  serialno
ft_otp/oath-toolkit-2.6.9/libpskc/gl/: Makefile  Makefile.am  Makefile.in  libgnu.la  libgnu_la-base64.lo  libgnu_la-imaxtostr.lo  libgnu_la-inttostr.lo  libgnu_la-offtostr.lo  libgnu_la-uinttostr.lo  libgnu_la-umaxtostr.lo  stdlib.h  string.h  unistd.h
ft_otp/oath-toolkit-2.6.9/libpskc/gtk-doc/: Makefile  Makefile.am  Makefile.in
ft_otp/oath-toolkit-2.6.9/libpskc/include/: Makefile  Makefile.am  Makefile.in
ft_otp/oath-toolkit-2.6.9/libpskc/man/: Makefile  Makefile.am  Makefile.gdoc  Makefile.in  gdoc  pskc_add_keypackage.3  pskc_build_xml.3  pskc_check_version.3  pskc_done.3  pskc_free.3  pskc_get_cryptomodule_id.3  pskc_get_device_devicebinding.3  pskc_get_device_expirydate.3  pskc_get_device_issueno.3  pskc_get_device_manufacturer.3  pskc_get_device_model.3  pskc_get_device_serialno.3  pskc_get_device_startdate.3  pskc_get_device_userid.3  pskc_get_id.3  pskc_get_key_algorithm.3  pskc_get_key_algparm_chall_checkdigits.3  pskc_get_key_algparm_chall_encoding.3  pskc_get_key_algparm_chall_max.3  pskc_get_key_algparm_chall_min.3  pskc_get_key_algparm_resp_checkdigits.3  pskc_get_key_algparm_resp_encoding.3  pskc_get_key_algparm_resp_length.3  pskc_get_key_algparm_suite.3  pskc_get_key_data_b64secret.3  pskc_get_key_data_counter.3  pskc_get_key_data_secret.3  pskc_get_key_data_time.3  pskc_get_key_data_timedrift.3  pskc_get_key_data_timeinterval.3  pskc_get_key_friendlyname.3  pskc_get_key_id.3  pskc_get_key_issuer.3  pskc_get_key_policy_expirydate.3  pskc_get_key_policy_keyusages.3  (+73 more)
ft_otp/oath-toolkit-2.6.9/libpskc/schemas/: Makefile  Makefile.in  catalog-pskc.xml
ft_otp/oath-toolkit-2.6.9/libpskc/tests/: Makefile  Makefile.am  Makefile.in  libpskc.supp  tst_accessors.c  tst_basic.c  tst_errors.c  tst_invalidread.c  (+2 more)
ft_otp/oath-toolkit-2.6.9/oathtool/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  liboathtool_cmd.la  liboathtool_cmd_la-oathtool_cmd.lo  libtool  oathtool  oathtool.c  oathtool.ggo  oathtool.h2m  oathtool_cmd.c  oathtool_cmd.h
ft_otp/oath-toolkit-2.6.9/pam_oath/: Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  pam_modutil.c  pam_modutil.h  pam_oath.c
ft_otp/oath-toolkit-2.6.9/pskctool/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libpskctool_cmd.la  libpskctool_cmd_la-pskctool_cmd.lo  libtool  pskctool  pskctool.1  pskctool.c  pskctool.ggo  pskctool.h2m
ft_otp/oath-toolkit-2.6.9/website/: download.txt  oath-toolkit.xsl  style.css
(+762 files in other folders)
